src/bindings/bindings_debug.rs

#[test]
fn bindgen_test_layout_Clay_RectangleElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_RectangleElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_RectangleElementConfig>(),
        32usize,
        concat!("Size of: ", stringify!(Clay_RectangleElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_RectangleElementConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_RectangleElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).color) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_RectangleElementConfig),
            "::",
            stringify!(color)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cornerRadius) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_RectangleElementConfig),
            "::",
            stringify!(cornerRadius)
        )
    );
}
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_WORDS: Clay_TextElementConfigWrapMode = 0;
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_NEWLINES: Clay_TextElementConfigWrapMode =
    1;
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_NONE: Clay_TextElementConfigWrapMode = 2;
pub type Clay_TextElementConfigWrapMode = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_TextElementConfig {
    pub textColor: Clay_Color,
    pub fontId: u16,
    pub fontSize: u16,
    pub letterSpacing: u16,
    pub lineHeight: u16,
    pub wrapMode: Clay_TextElementConfigWrapMode,
}
#[test]
fn bindgen_test_layout_Clay_TextElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_TextElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_TextElementConfig>(),
        28usize,
        concat!("Size of: ", stringify!(Clay_TextElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_TextElementConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_TextElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).textColor) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_TextElementConfig),
            "::",
            stringify!(textColor)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fontId) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_TextElementConfig),
            "::",
            stringify!(fontId)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fontSize) as usize - ptr as usize },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_TextElementConfig),
            "::",
            stringify!(fontSize)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).letterSpacing) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_TextElementConfig),
            "::",
            stringify!(letterSpacing)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).lineHeight) as usize - ptr as usize },
        22usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_TextElementConfig),
            "::",
            stringify!(lineHeight)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).wrapMode) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_TextElementConfig),
            "::",
            stringify!(wrapMode)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ImageElementConfig {
    pub imageData: *mut ::core::ffi::c_void,
    pub sourceDimensions: Clay_Dimensions,
}
#[test]
fn bindgen_test_layout_Clay_ImageElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ImageElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ImageElementConfig>(),
        16usize,
        concat!("Size of: ", stringify!(Clay_ImageElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ImageElementConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_ImageElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).imageData) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ImageElementConfig),
            "::",
            stringify!(imageData)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sourceDimensions) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ImageElementConfig),
            "::",
            stringify!(sourceDimensions)
        )
    );
}
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_TOP: Clay_FloatingAttachPointType = 0;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_CENTER: Clay_FloatingAttachPointType =
    1;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_LEFT_BOTTOM: Clay_FloatingAttachPointType =
    2;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_TOP: Clay_FloatingAttachPointType =
    3;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_CENTER:
    Clay_FloatingAttachPointType = 4;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_CENTER_BOTTOM:
    Clay_FloatingAttachPointType = 5;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_TOP: Clay_FloatingAttachPointType =
    6;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_CENTER:
    Clay_FloatingAttachPointType = 7;
pub const Clay_FloatingAttachPointType_CLAY_ATTACH_POINT_RIGHT_BOTTOM:
    Clay_FloatingAttachPointType = 8;
pub type Clay_FloatingAttachPointType = ::core::ffi::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingAttachPoints {
    pub element: Clay_FloatingAttachPointType,
    pub parent: Clay_FloatingAttachPointType,
}
#[test]
fn bindgen_test_layout_Clay_FloatingAttachPoints() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_FloatingAttachPoints> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_FloatingAttachPoints>(),
        2usize,
        concat!("Size of: ", stringify!(Clay_FloatingAttachPoints))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_FloatingAttachPoints>(),
        1usize,
        concat!("Alignment of ", stringify!(Clay_FloatingAttachPoints))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).element) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingAttachPoints),
            "::",
            stringify!(element)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingAttachPoints),
            "::",
            stringify!(parent)
        )
    );
}
pub const Clay_PointerCaptureMode_CLAY_POINTER_CAPTURE_MODE_CAPTURE: Clay_PointerCaptureMode = 0;
pub const Clay_PointerCaptureMode_CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH: Clay_PointerCaptureMode =
    1;
pub type Clay_PointerCaptureMode = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingElementConfig {
    pub offset: Clay_Vector2,
    pub expand: Clay_Dimensions,
    pub zIndex: u16,
    pub parentId: u32,
    pub attachment: Clay_FloatingAttachPoints,
    pub pointerCaptureMode: Clay_PointerCaptureMode,
}
#[test]
fn bindgen_test_layout_Clay_FloatingElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_FloatingElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_FloatingElementConfig>(),
        32usize,
        concat!("Size of: ", stringify!(Clay_FloatingElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_FloatingElementConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_FloatingElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).offset) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingElementConfig),
            "::",
            stringify!(offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).expand) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingElementConfig),
            "::",
            stringify!(expand)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).zIndex) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingElementConfig),
            "::",
            stringify!(zIndex)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parentId) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingElementConfig),
            "::",
            stringify!(parentId)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).attachment) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingElementConfig),
            "::",
            stringify!(attachment)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pointerCaptureMode) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_FloatingElementConfig),
            "::",
            stringify!(pointerCaptureMode)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CustomElementConfig {
    pub customData: *mut ::core::ffi::c_void,
}
#[test]
fn bindgen_test_layout_Clay_CustomElementConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_CustomElementConfig> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_CustomElementConfig>(),
        8usize,
        concat!("Size of: ", stringify!(Clay_CustomElementConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_CustomElementConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(Clay_CustomElementConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).customData) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_CustomElementConfig),
            "::",
            stringify!(customData)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ScrollElementConfig {
    pub horizontal: bool,
    pub vertical: bool,
}
